# LunaBeat

./: README.md  README_AR.md  README_DE.md  README_EN.md  README_ES.md  README_FR.md  README_HI.md  README_ID.md  README_JA.md  README_KO.md  README_PT.md  README_RU.md  README_TH.md  README_TR.md  README_VI.md  README_ZH_TW.md  build.gradle.kts  build_log.txt  build_output.txt  gradle.properties  parse_opencc.py  settings.gradle.kts  xuqiu.txt
.trae/rules/: buildauto.md
app/: build.gradle.kts  proguard-rules.pro
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/main/: AndroidManifest.xml
app/src/main/assets/: JapRoman.txt
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/res/anim/: player_slide_down_out.xml  player_slide_up_in.xml
app/src/main/res/drawable/: add.xml  alipay.xml  back.xml  back__left.xml  baseline_folder_open_24.xml  baseline_my_location_24.xml  baseline_pause_24.xml  baseline_stop_24.xml  close.xml  cutpic.xml  delete.xml  down.xml  fastforward.xml  follow.xml  github.xml  ic_launcher_background.xml  ic_launcher_background_theme.xml  img.xml  lyricon_status_icon.xml  menu.xml  more.xml  next.xml  nextl.xml  pause.xml  pencil.xml  play.xml  prel.xml  redo.xml  rewind.xml  save.xml  search.xml  searchbold.xml  sing.xml  splash_icon.xml  undo.xml  wechat.xml
audiotag/: build.gradle.kts  proguard-rules.pro
audiotag/src/main/cpp/: taglib.cpp  utils.h
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+102 files in other folders)
